--- a/training_module.info.yml
+++ b/training_module.info.yml
@@ -1,7 +1,7 @@
 name: 'Training Drupal Development'
 package: 'Training'
 type: module
-core_version_requirement: ^9 || ^10
+core_version_requirement: ^9 || ^10 || ^11
 description: 'Training on the basics of Drupal development'
 libraries:
   - training/global
